Moved HTML files to root and fixed paths

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ function closePopup() {
       <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
-          <img src="/assets/heroLogo.png" alt="Logo" height="54" width="184">
+          <img src="assets/heroLogo.png" alt="Logo" height="54" width="184">
         </a>
 
         <!-- Mobile Toggle -->
@@ -634,7 +634,7 @@ function closePopup() {
     <div class="popup-content">
       <!-- Left Image -->
       <div class="popup-image">
-        <img src="/assets/heroImage.png" alt="Project View">
+        <img src="assets/heroImage.png" alt="Project View">
       </div>
 
       <!-- Right Form -->
@@ -744,8 +744,8 @@ function closePopup() {
       <div class="row align-items-center mb-5">
         <div class="col-md-6">
           <div class="position-relative img-wrapper mx-auto">
-            <img class="img-base" src="/assets/baseImage.png" alt="Base image">
-            <img class="img-overlay" src="/assets/Rectangle 67.png" alt="Overlay image">
+            <img class="img-base" src="assets/baseImage.png" alt="Base image">
+            <img class="img-overlay" src="assets/Rectangle 67.png" alt="Overlay image">
           </div>
         </div>
         <div class="col-md-6">
